[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "rocksampler"
version = "1.0.0"
dependencies = [
  "scipy",
  "numpy",
  "matplotlib",
  "astropy",
  "dill",
  "dlnpyutils",
  "sphinx-astropy",
]
requires-python = ">=3.11"
authors = [
  {name = "David Nidever", email = "dnidever@montana.edu"},
]
maintainers = [
  {name = "David Nidever", email = "dnidever@montana.edu"}
]
description = "SSO orbit sampler for tracklet information"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["software","solar sytem objects","orbits","sampler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
#Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/dnidever/rocksampler"
#Issues = "https://github.com/dnidever/rocksampler/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
